wrap integration tests and data seeding